Fixed a bug with the last date on the personal graph and changed the flavor text on the teams entry box.

--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -21,7 +21,7 @@
         {
             commaString += $"\"{ingest.Created.ToShortDateString()}\", ";
         }
-        @Html.Raw($"var dateArr = [{commaString}\"{graphData.FirstOrDefault().Created.AddDays(-1).ToShortDateString()}\"];");
+        @Html.Raw($"var dateArr = [{commaString}\"{graphData.LastOrDefault().Created.AddDays(-1).ToShortDateString()}\"];");
     }
 </script>
 <div class="container">
