Continued building out the structure to support resolving issue #12.

--- a/Ocean2Ocean.Mvc/Views/Journeys/Journeys.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Journeys/Journeys.cshtml
@@ -40,6 +40,9 @@
                                     <p class="card-text">
                                         @journey.Bio
                                     </p>
+                                    <a class="btn btn-outline-primary btn-block" href="/Journeys/@journey.JourneyName">
+                                        Edit
+                                    </a>
                                     <a class="btn btn-primary btn-block" href="/@journey.JourneyName">
                                         🗺️ View
                                     </a>
