--- a/Ocean2Ocean.Mvc/Views/Nicknames/Nicknames.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Nicknames/Nicknames.cshtml
@@ -40,9 +40,9 @@
                                     <p class="card-text">
                                         @name.Bio
                                     </p>
-                                    @*<a class="btn btn-primary btn-block" href="/@team.TeamName" target="_blank noreferrer">
-                                            🗺️ View
-                                        </a>*@
+                                    <a class="btn btn-outline-primary btn-block" href="/Nicknames/@name.Name" target="_blank noreferrer">
+                                        Edit
+                                    </a>
                                 </div>
                                 <div class="card-footer text-muted">
                                     Created on @name.Created.ToShortDateString()
