--- a/Ocean2Ocean.Mvc/Views/Teams/Teams.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Teams/Teams.cshtml
@@ -41,9 +41,9 @@
                                     <p class="card-text">
                                         @team.Bio
                                     </p>
-                                    @*<a class="btn btn-primary btn-block" href="/@team.TeamName" target="_blank noreferrer">
-                                            🗺️ View
-                                        </a>*@
+                                    <a class="btn btn-outline-primary btn-block" href="/Teams/@team.TeamName" target="_blank noreferrer">
+                                        Edit
+                                    </a>
                                 </div>
                                 <div class="card-footer text-muted">
                                     Created on @team.Created.ToShortDateString()
