--- a/Ocean2Ocean.Mvc/Views/Nicknames/Nickname.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Nicknames/Nickname.cshtml
@@ -7,11 +7,12 @@
     <h1 class="display-4 pt-3 pb-3">
         @Model?.Nickname?.Name
     </h1>
-    <form class="needs-validation" novalidate="" method="post">
+    <form class="needs-validation" novalidate="" method="post" action="/Nicknames/Update">
+        <input type="number" name="NicknameId" value="@Model?.Nickname.NicknameId" hidden />
         <div class="row">
             <div class="col pb-3">
                 <label for="firstName">What will we call you?</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Speedy Spork" value="@Model?.Nickname?.Name" required>
+                <input type="text" class="form-control" id="Name" name="Name" placeholder="Speedy Spork" value="@Model?.Nickname?.Name" readonly>
                 <div class="invalid-feedback">
                     Valid name is required.
                 </div>
@@ -47,20 +48,20 @@
                                 <img class="card-img-top" src="@journey?.ImagePath" />
                                 <div class="card-body">
                                     <h5 class="card-title">
-                                        @journey.JourneyName
+                                        @journey?.JourneyName
                                     </h5>
                                     <p class="card-text">
-                                        @journey.Bio
+                                        @journey?.Bio
                                     </p>
-                                    <a class="btn btn-outline-primary btn-block" href="/Journeys/@journey.JourneyName">
+                                    <a class="btn btn-outline-primary btn-block" href="/Journeys/@journey?.JourneyName">
                                         Edit
                                     </a>
-                                    <a class="btn btn-primary btn-block" href="/@journey.JourneyName">
+                                    <a class="btn btn-primary btn-block" href="/@journey?.JourneyName">
                                         🗺️ View
                                     </a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    Created on @journey.Created.ToShortDateString()
+                                    Created on @journey?.Created.ToShortDateString()
                                 </div>
                             </div>
                         </div>
@@ -90,18 +91,18 @@
                                 @*<img class="card-img-top" src="@journey?.ImagePath" />*@
                                 <div class="card-body">
                                     <h5 class="card-title">
-                                        @team.TeamName
+                                        @team?.TeamName
                                     </h5>
-                                    <a href="@team.TeamWebsite">@team.TeamWebsite</a>
+                                    <a href="@team?.TeamWebsite">@team?.TeamWebsite</a>
                                     <p class="card-text">
-                                        @team.Bio
+                                        @team?.Bio
                                     </p>
-                                    <a class="btn btn-outline-primary btn-block" href="/Teams/@team.TeamName">
+                                    <a class="btn btn-outline-primary btn-block" href="/Teams/@team?.TeamName">
                                         Edit
                                     </a>
                                 </div>
                                 <div class="card-footer text-muted">
-                                    Created on @team.Created.ToShortDateString()
+                                    Created on @team?.Created.ToShortDateString()
                                 </div>
                             </div>
                         </div>
