Added dropdown boxes to the map to allow the selection of a team on the map page with a drop down. Supports resolving issue #12.

--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -122,6 +122,9 @@
             </div>
         }
     }
+    <a class="btn btn-primary" href="/@Model?.FirstOrDefault().JourneyName/@Model?.FirstOrDefault().TeamName/@Model?.FirstOrDefault().Nickname">
+        🗺️ Return to the Map
+    </a>
 </div>
 <script>
     var ctx = document.getElementById('myChart');
