--- a/Ocean2Ocean.Mvc/Views/Journeys/Journey.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Journeys/Journey.cshtml
@@ -57,7 +57,7 @@
         </details>
         <div class="row">
             <div class="col pt-3">
-                <button class="btn btn-primary btn-lg btn-block" type="submit">Update</button>
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Revise your Journey</button>
             </div>
         </div>
     </form>
