--- a/Ocean2Ocean.Mvc/Views/Map/Leaderboard.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/Leaderboard.cshtml
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col">
                     <h1 class="display-4 pt-3">
-                        📅 Daily Contributions for @Model?.DailyRankings?.FirstOrDefault()?.JourneyName
+                        📅 Daily Steps for @Model?.DailyRankings?.FirstOrDefault()?.JourneyName
                     </h1>
                     <p>
                         @*@{
@@ -72,6 +72,9 @@
                                         Nickname
                                     </th>
                                     <th>
+                                        Team
+                                    </th>
+                                    <th>
                                         Steps
                                     </th>
                                     <th>
@@ -99,6 +102,9 @@
                                                     @names[i].Nickname
                                                 </td>
                                                 <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
                                                     @names[i]?.TotalSteps.ToString("N0") Steps
                                                 </td>
                                                 <td>
@@ -116,6 +122,9 @@
                                                     @names[i].Nickname
                                                 </td>
                                                 <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
                                                     @names[i]?.TotalSteps.ToString("N0") Steps
                                                 </td>
                                                 <td>
@@ -131,6 +140,9 @@
                                                 </td>
                                                 <td>
                                                     @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
                                                 </td>
                                                 <td>
                                                     @names[i]?.TotalSteps.ToString("N0") Steps
@@ -153,6 +165,9 @@
                                             <td>
 
                                                 @Model.DailyRankings.FirstOrDefault().JourneyName
+                                            </td>
+                                            <td>
+                                                All
                                             </td>
                                             <td>
                                                 @{
@@ -180,6 +195,9 @@
                                                 @Model.DailyRankings.FirstOrDefault().JourneyName
                                             </td>
                                             <td>
+                                                All
+                                            </td>
+                                            <td>
                                                 @{
                                                     string formattedTotal = $"{total.ToString("N0")} Steps";
                                                 }
@@ -193,6 +211,103 @@
                                                 @formattedCompleted
                                             </td>
                                         </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <h1 class="display-4 pt-3">
+                        Daily Steps By Team
+                    </h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover table-borderless">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Rank
+                                    </th>
+                                    <th>
+                                        Team
+                                    </th>
+                                    <th>
+                                        Steps
+                                    </th>
+                                    <th>
+                                        Contributed
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    names = Model?.DailyTeamRankings.ToArray();
+
+                                    for (int i = 0; i < names.Length; i++)
+                                    {
+                                        var postion = i + 1;
+                                        decimal portion = Decimal.Divide(names[i].TotalSteps, names.Sum(x => x.TotalSteps));
+                                        string formattedPortion = (portion * 100M).ToString("N2") + " %";
+
+                                        // First place
+                                        if (i == 0)
+                                        {
+                                            <tr>
+                                                <td scope="row">
+                                                    <strong>@postion 🏆</strong>
+                                                </td>
+                                                <td>
+                                                    @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
+                                                    @names[i]?.TotalSteps.ToString("N0") Steps
+                                                </td>
+                                                <td>
+                                                    @formattedPortion
+                                                </td>
+                                            </tr>
+                                        }
+                                        else if (i == names.Length - 1)
+                                        {
+                                            <tr>
+                                                <td scope="row">
+                                                    <strong>@postion 🐌</strong>
+                                                </td>
+                                                <td>
+                                                    @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
+                                                    @names[i]?.TotalSteps.ToString("N0") Steps
+                                                </td>
+                                                <td>
+                                                    @formattedPortion
+                                                </td>
+                                            </tr>
+                                        }
+                                        else
+                                        {
+                                            <tr>
+                                                <td scope="row">
+                                                    <strong>@postion</strong>
+                                                </td>
+                                                <td>
+                                                    @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
+                                                    @names[i]?.TotalSteps.ToString("N0") Steps
+                                                </td>
+                                                <td>
+                                                    @formattedPortion
+                                                </td>
+                                            </tr>
+                                        }
                                     }
                                 }
                             </tbody>
@@ -215,7 +330,7 @@
             <div class="row">
                 <div class="col">
                     <h1 class="display-4 pt-3">
-                        🏋️ Journey Leaderboard for @Model?.JourneyRankings?.FirstOrDefault()?.JourneyName
+                        🏋️ Total Steps by Day for @Model?.JourneyRankings?.FirstOrDefault()?.JourneyName
                     </h1>
                 </div>
             </div>
@@ -225,6 +340,9 @@
                         @Model?.JourneyRankings.FirstOrDefault()?.JourneyName has made it <strong>@Model?.JourneyRankings.Sum(x => x.TotalSteps).ToString("N0")</strong> steps into its Journey so far!
                     </div>
                     <canvas id="myChart" width="400" height="200" class="pb-4"></canvas>
+                    <h1 class="display-4 pt-3">
+                        Total Steps By Team
+                    </h1>
                     <div class="table-responsive">
                         <table class="table table-striped table-hover table-borderless">
                             <thead>
@@ -233,7 +351,7 @@
                                         Rank
                                     </th>
                                     <th>
-                                        Nickname
+                                        Team
                                     </th>
                                     <th>
                                         Steps
@@ -245,7 +363,8 @@
                             </thead>
                             <tbody>
                                 @{
-                                    var names = Model?.JourneyRankings.ToArray();
+                                    var names = Model?.TeamRankings.ToArray();
+
                                     for (int i = 0; i < names.Length; i++)
                                     {
                                         var postion = i + 1;
@@ -261,6 +380,108 @@
                                                 </td>
                                                 <td>
                                                     @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
+                                                    @names[i]?.TotalSteps.ToString("N0") Steps
+                                                </td>
+                                                <td>
+                                                    @formattedPortion
+                                                </td>
+                                            </tr>
+                                        }
+                                        else if (i == names.Length - 1)
+                                        {
+                                            <tr>
+                                                <td scope="row">
+                                                    <strong>@postion 🐌</strong>
+                                                </td>
+                                                <td>
+                                                    @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
+                                                    @names[i]?.TotalSteps.ToString("N0") Steps
+                                                </td>
+                                                <td>
+                                                    @formattedPortion
+                                                </td>
+                                            </tr>
+                                        }
+                                        else
+                                        {
+                                            <tr>
+                                                <td scope="row">
+                                                    <strong>@postion</strong>
+                                                </td>
+                                                <td>
+                                                    @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
+                                                    @names[i]?.TotalSteps.ToString("N0") Steps
+                                                </td>
+                                                <td>
+                                                    @formattedPortion
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <h1 class="display-4 pt-3">
+                        Total Steps By Nickname
+                    </h1>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover table-borderless">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Rank
+                                    </th>
+                                    <th>
+                                        Nickname
+                                    </th>
+                                    <th>
+                                        Team
+                                    </th>
+                                    <th>
+                                        Steps
+                                    </th>
+                                    <th>
+                                        Contributed
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    names = Model?.JourneyRankings.ToArray();
+                                    for (int i = 0; i < names.Length; i++)
+                                    {
+                                        var postion = i + 1;
+                                        decimal portion = Decimal.Divide(names[i].TotalSteps, names.Sum(x => x.TotalSteps));
+                                        string formattedPortion = (portion * 100M).ToString("N2") + " %";
+
+                                        // First place
+                                        if (i == 0)
+                                        {
+                                            <tr>
+                                                <td scope="row">
+                                                    <strong>@postion 🏆</strong>
+                                                </td>
+                                                <td>
+                                                    @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
                                                 </td>
                                                 <td>
                                                     @names[i].TotalSteps Steps
@@ -280,6 +501,9 @@
                                                     @names[i].Nickname
                                                 </td>
                                                 <td>
+                                                    @names[i].TeamName
+                                                </td>
+                                                <td>
                                                     @names[i].TotalSteps Steps
                                                 </td>
                                                 <td>
@@ -295,6 +519,9 @@
                                                 </td>
                                                 <td>
                                                     @names[i].Nickname
+                                                </td>
+                                                <td>
+                                                    @names[i].TeamName
                                                 </td>
                                                 <td>
                                                     @names[i].TotalSteps Steps
