--- a/Ocean2Ocean.Mvc/Views/Map/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/AddSteps.cshtml
@@ -28,103 +28,106 @@
     @{
         if (Model != null && Model.Any())
         {
-        <div class="row">
-            <div class="col">
-                <h1 class="display-4 pt-3">
-                    Steps Submitted for @Model?.FirstOrDefault()?.Nickname
-                </h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="alert alert-success mt-3" role="alert">
-                    You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!
+            <div class="row">
+                <div class="col">
+                    <h1 class="display-4 pt-3">
+                        Steps Submitted for @Model?.FirstOrDefault()?.Nickname
+                    </h1>
                 </div>
-                <canvas id="myChart" width="400" height="200" class="pb-4"></canvas>
-                <div class="table-responsive">
-                    <table class="table table-striped table-hover table-borderless">
-                        <thead>
-                            <tr>
-                                <th>
-                                    Steps
-                                </th>
-                                <th>
-                                    Created
-                                </th>
-                                <th>
-                                    Journey
-                                </th>
-                                <th>
-                                    Team
-                                </th>
-                                <th>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="alert alert-success mt-3" role="alert">
+                        You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!
+                    </div>
+                    <canvas id="myChart" width="400" height="200" class="pb-4"></canvas>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover table-borderless">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Steps
+                                    </th>
+                                    <th>
+                                        Created
+                                    </th>
+                                    <th>
+                                        Journey
+                                    </th>
+                                    <th>
+                                        Team
+                                    </th>
+                                    <th>
 
-                                </th>
-                                <th>
+                                    </th>
+                                    <th>
 
-                                </th>
-                                <th>
+                                    </th>
+                                    <th>
 
-                                </th>
+                                    </th>
 
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @{
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
                                     foreach (var entry in Model)
                                     {
-                                <tr>
-                                    <td>
-                                        @{
+                                        <tr>
+                                            <td>
+                                                @{
                                                     string formattedSteps = $"{entry?.Steps.ToString("N0")} Steps";
-                                        }
-                                        @formattedSteps
-                                    </td>
-                                    <td>
-                                        @entry?.Created
-                                    </td>
-                                    <td>
-                                        @entry?.JourneyName
-                                    </td>
-                                    <td>
-                                        @entry?.TeamName
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-primary" href="/@entry.JourneyName/@entry.TeamName/@entry.Nickname">
-                                            🗺️ View
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-success" href="/@entry?.JourneyName/Leaderboard/">🌠 Leaderboard</a>
-                                    </td>
-                                    <td>
-                                        <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-stepId="@entry?.StepId">
-                                            <button type="submit" class="btn btn-danger">
-                                                ❌ Delete
-                                            </button>
-                                        </form>
-                                    </td>
-                                </tr>
+                                                }
+                                                @formattedSteps
+                                            </td>
+                                            <td>
+                                                @entry?.Created
+                                            </td>
+                                            <td>
+                                                @entry?.JourneyName
+                                            </td>
+                                            <td>
+                                                @entry?.TeamName
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-primary" href="/@entry.JourneyName/@entry.TeamName/@entry.Nickname">
+                                                    🗺️ View
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-success" href="/@entry?.JourneyName/Leaderboard/">🌠 Leaderboard</a>
+                                            </td>
+                                            <td>
+                                                <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-stepId="@entry?.StepId">
+                                                    <button type="submit" class="btn btn-danger">
+                                                        ❌ Delete
+                                                    </button>
+                                                </form>
+                                            </td>
+                                        </tr>
                                     }
-                            }
-                        </tbody>
-                    </table>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
         }
         else
         {
-        <div class="pt-3">
-            <div class="alert alert-warning" role="alert">
-                No results found.
+            <div class="pt-3">
+                <div class="alert alert-warning" role="alert">
+                    No results found.
+                </div>
             </div>
-        </div>
         }
     }
-    <a class="btn btn-primary" href="/@Model?.FirstOrDefault().JourneyName/@Model?.FirstOrDefault().TeamName/@Model?.FirstOrDefault().Nickname">
-        🗺️ Return to the Map
-    </a>
+    @{
+        var mapLink = $"/{Model?.FirstOrDefault().JourneyName}/{Model?.FirstOrDefault().TeamName}/{Model?.FirstOrDefault().Nickname.Replace("/", "%2F")}";
+        <a class="btn btn-primary" href="@mapLink">
+            🗺️ Return to the Map
+        </a>
+    }
 </div>
 <script>
     var ctx = document.getElementById('myChart');
