--- a/Ocean2Ocean.Mvc/Views/Map/Map.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Map/Map.cshtml
@@ -57,7 +57,7 @@
                             {
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Journey Name</label>
-                                    <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey (SE Walk Across America)" required>
+                                    <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey (SE Walk Across America)" pattern="[A-Za-z0-9\s]+" required>
                                     <small id="emailHelp" class="form-text text-muted">What does your team call this event?</small>
                                 </div>
                             }
