--- a/Ocean2Ocean.Mvc/Views/Nicknames/Add.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Nicknames/Add.cshtml
@@ -7,20 +7,21 @@
     <h1 class="display-4 pt-3 pb-3">
         🚣 Create an Alter-ego
     </h1>
-    <form class="needs-validation" novalidate="" method="post">
+    <form class="needs-validation" method="post">
         <div class="row">
             <div class="col pb-3">
-                <label for="firstName">What will we call you?</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Speedy Spork" value="" required>
+                <label for="name">What will we call you?</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Speedy Spork" pattern="[A-Za-z0-9\s]+" required>
                 <div class="invalid-feedback">
                     Valid name is required.
                 </div>
+                <small id="nameHelp" class="form-text text-muted">Special characters are not allowed.</small>
             </div>
         </div>
         <div class="row">
             <div class="col pb-3">
                 <label for="lastName">Who are you?</label>
-                <input type="text" class="form-control" id="Bio" name="Bio" placeholder="The fastest utensil on the planet." value="" required>
+                <input type="text" class="form-control" id="Bio" name="Bio" placeholder="The fastest utensil on the planet." required>
                 <div class="invalid-feedback">
                     Valid bio is required.
                 </div>
