--- a/Ocean2Ocean.Mvc/Views/Teams/Add.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Teams/Add.cshtml
@@ -7,20 +7,21 @@
     <h1 class="display-4 pt-3 pb-3">
         🚣 Start A New Team
     </h1>
-    <form class="needs-validation" novalidate="" method="post">
+    <form class="needs-validation" method="post">
         <div class="row">
             <div class="col pb-3">
                 <label for="firstName">What will we call your Team?</label>
-                <input type="text" class="form-control" id="TeamName" name="TeamName" placeholder="KCIT Software Engineering" value="" required>
+                <input type="text" class="form-control" id="TeamName" name="TeamName" placeholder="KCIT Software Engineering" pattern="[A-Za-z0-9\s]+" required>
                 <div class="invalid-feedback">
                     Valid team name is required.
                 </div>
+                <small id="nameHelp" class="form-text text-muted">Special characters are not allowed.</small>
             </div>
         </div>
         <div class="row">
             <div class="col pb-3">
-                <label for="lastName">Why Do We Walk?</label>
-                <input type="text" class="form-control" id="Bio" name="Bio" placeholder="We hang out on Fridays." value="" required>
+                <label for="lastName">Why are you a team?</label>
+                <input type="text" class="form-control" id="Bio" name="Bio" placeholder="We hang out on Fridays." required>
                 <div class="invalid-feedback">
                     Valid bio is required.
                 </div>
@@ -29,7 +30,7 @@
         <div class="row">
             <div class="col pb-3">
                 <label for="lastName">Where can friends learn more about your team?</label>
-                <input type="text" class="form-control" id="TeamWebsite" name="TeamWebsite" placeholder="https://thomasryan.xyz/" value="" required>
+                <input type="text" class="form-control" id="TeamWebsite" name="TeamWebsite" placeholder="https://thomasryan.xyz/" pattern="[A-Za-z0-9\s]+" required>
                 <div class="invalid-feedback">
                     Valid website is required.
                 </div>
